<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="15dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/ranking_textview"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_weight="1"
            android:fontFamily="@font/lato_bold"
            android:text="@string/ranking_profile"
            android:textSize="17sp" />

        <TextView
            android:id="@+id/profile_name_textview"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:fontFamily="@font/lato_bold"
            android:text="@string/profile_name_text_search"
            android:textSize="17sp" />

        <TextView
            android:id="@+id/leaderboard_filter_type"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="@font/lato_bold"
            android:text="@string/profile_points_text_search"
            android:textSize="17sp" />

    </LinearLayout>
</RelativeLayout>